8259556: [lworld] Various C2 crashes with -XX:-ScalarizeInlineTypes