test/hotspot/jtreg/compiler/valhalla/inlinetypes/TestLWorldProfiling.java
@@ -361,7 +361,7 @@ public class TestLWorldProfiling extends InlineTypeTest {
                     deopt = true;
                 }
             }
-            if (!TieredCompilation && !STRESS_CC && (deopt && (UseArrayLoadStoreProfile || TypeProfileLevel == 222))) {
+            if (deopt && !TieredCompilation && !STRESS_CC && ProfileInterpreter && (UseArrayLoadStoreProfile || TypeProfileLevel == 222)) {
                 throw new RuntimeException("Monomorphic array check should rely on profiling and be accurate");
             }
         }
